--- a/osa_4/blogi/package.json
+++ b/osa_4/blogi/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon index.js",
-    "start": "node index.js",
-    "lint": "eslint .",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "lint": "eslint ."
   },
   "author": "Michael Aminoff",
   "license": "ISC",
@@ -15,11 +15,15 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "dotenv": ""
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
+    "babel-eslint": "^8.2.2",
+    "cross-env": "^5.1.3",
+    "eslint": "^4.18.1",
     "jest": "^22.4.2",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "supertest": "^3.0.0"
   }
 }
