--- a/osa_4/blogi/package.json
+++ b/osa_4/blogi/package.json
@@ -12,11 +12,12 @@
   "author": "Michael Aminoff",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "cors": "^2.8.4",
+    "dotenv": "",
     "express": "^4.16.2",
     "mongoose": "^5.0.4",
-    "morgan": "^1.9.0",
-    "dotenv": ""
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
