--- a/osa_5/frontend/package.json
+++ b/osa_5/frontend/package.json
@@ -18,6 +18,8 @@
   "proxy": "http://localhost:3003",
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jsdom": "11.6.2",
+    "jsdom-global": "3.0.2"
   }
 }
