--- a/osa_6/redux_anectodes_v2/package.json
+++ b/osa_6/redux_anectodes_v2/package.json
@@ -15,7 +15,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.18.2",
+    "eslint-plugin-jest": "^21.12.3",
     "eslint-plugin-react": "^7.7.0"
   }
 }
